--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 
 			<!-- <a> creates an anchor and "href" creates a hyperlink -->
 			<a href="mailto:liamwm47@gmail.com" class = "btn btn-success btn-lg mt-3" id = "button">get the sharingan here</a>
+
+			<audio controls loop  id="playaudio">
+                <source src="tf_nemesis.mp3">
+            </audio>
+
 		</section>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
